add login and logout routes and update swagger
